--- a/Entregable2/index.html
+++ b/Entregable2/index.html
@@ -13,12 +13,11 @@
          <h1>My Business Webpage</h1>
       </header>
       <nav>
-         <a href="#whoweare"><button>Who We are?</button></a>
-         <a href="#services"><button>Services</button></a>
-         <a href="#portfolio"><button>Portfolio</button></a>
-         <a href="#location"><button>Location</button></a>
-         <a href="#emailus"><button>Email Us</button></a>
-         </ul>
+         <a href="#whoweare">Who We are?</a>
+         <a href="#services">Services</a>
+         <a href="#portfolio">Portfolio</a>
+         <a href="#location">Location</a>
+         <a href="#emailus">Email Us</a>
       </nav>
       <main>
          <section id="whoweare">
@@ -27,7 +26,7 @@
             <article class="box">
                <div class="column">
                   <h3>Lorem ipsum</h3>
-                  <img id="whoweareimage" src="img/1.jpg"> 
+                  <img id="whoweareimage" src="img/1.jpg" alt="who we are"> 
                   <p>
                      Lorem insum dolor sit amet. consectetur adiniscing elit. Mauris convallis magna sit amet diam euismod malesuada. Vestibulum metus tellus
                      interdum elementum nis1 sed. cursus sodales magna. Proin teugiat termentum metus. Nam 1aculis vel nion vitae lacinia. Nulam ut ante 16
@@ -43,7 +42,7 @@
                      interdum elementum nis1 sed. cursus sodales magna. Proin teugiat termentum metus. Nam 1aculis vel nion vitae lacinia. Nulam ut ante 16
                      tempus tortor. Interdum et malesuada tames ac ante iosum primis in faucibus. Praesent conque vanus rusto. 1d moleste nib
                   </p>
-                  <img id="adimg" src="img/ad.png">
+                  <img id="adimg" src="img/ad.png" alt="image of an ad">
                   <h3>Lorem ipsum</h3>
                   <p>
                      Lorem insum dolor sit amet. consectetur adiniscing elit. Mauris convallis magna sit amet diam euismod malesuada. Vestibulum metus tellus
@@ -66,8 +65,6 @@
                <div class="column">
                   <h3>Service 1</h3>
                   <p>Lorem insum dolor sit amet. consectetur adiniscing elit. Mauris convallis magna sit amet diam euismod malesuada.</p>
-                  </p>
-                  </p>
                </div>
                <div class="image_column">
                 <span class="fa-stack fa-2xl">
@@ -79,7 +76,6 @@
                <div class="column">
                   <h3>Service 2</h3>
                   <p>Lorem insum dolor sit amet. consectetur adiniscing elit. Mauris convallis magna sit amet diam euismod malesuada.</p>
-                  </p>
                </div>
                <div class="image_column">
                 <span class="fa-stack fa-2xl">
@@ -91,8 +87,7 @@
                <div class="column">
                   <h3>Service 3</h3>
                   <p>Lorem insum dolor sit amet. consectetur adiniscing elit. Mauris convallis magna sit amet diam euismod malesuada.</p>
-                  </p>
-               </div>
+                </div>
             </article>
             <article class="box">
                <div class="image_column">
@@ -105,7 +100,6 @@
                <div class="column">
                   <h3>Service 4</h3>
                   <p>Lorem insum dolor sit amet. consectetur adiniscing elit. Mauris convallis magna sit amet diam euismod malesuada.</p>
-                  </p>
                </div>
                <div class="image_column">
                 <span class="fa-stack fa-2xl">
@@ -117,7 +111,6 @@
                <div class="column">
                   <h3>Service 5</h3>
                   <p>Lorem insum dolor sit amet. consectetur adiniscing elit. Mauris convallis magna sit amet diam euismod malesuada.</p>
-                  </p>
                </div>
                <div class="image_column">
                 <span class="fa-stack fa-2xl">
@@ -129,24 +122,23 @@
                <div class="column">
                   <h3>Service 6</h3>
                   <p>Lorem insum dolor sit amet. consectetur adiniscing elit. Mauris convallis magna sit amet diam euismod malesuada.</p>
-                  </p>
                </div>
             </article>
          </section>
          <section id="portfolio">
+            <h2>Portfolio</h2>
             <article>
-               <h2>Portfolio</h2>
                <p>There are success projects created by us</p>
                <p>
-                  <img src="img/2.jpg">
-                  <img src="img/3.jpg">
-                  <img src="img/4.jpg"><br>
-                  <img src="img/5.jpg">
-                  <img src="img/6.jpg">
-                  <img src="img/7.jpg"><br>
-                  <img src="img/8.jpg">
-                  <img src="img/9.jpg">
-                  <img src="img/10.jpg">
+                  <img src="img/2.jpg" alt="foto">
+                  <img src="img/3.jpg" alt="foto">
+                  <img src="img/4.jpg" alt="foto"><br>
+                  <img src="img/5.jpg" alt="foto">
+                  <img src="img/6.jpg" alt="foto">
+                  <img src="img/7.jpg" alt="foto"><br>
+                  <img src="img/8.jpg" alt="foto">
+                  <img src="img/9.jpg" alt="foto">
+                  <img src="img/10.jpg" alt="foto">
                </p>
             </article>
          </section>
@@ -190,9 +182,9 @@
                <div class="column">
                     <input type="text" name="name" id="input_name" autocomplete="on" required>
                     <input type="email" name="email" id="input_email" autocomplete="on" required>
-                    <input type="phone" name="phone" id="input_phone" autocomplete="on">
+                    <input type="tel" name="phone" id="input_phone" autocomplete="on">
                      <input type="text" name="subject" id="input_subject" required>
-                     <textarea name="message" required id="input_message" required></textarea>
+                     <textarea name="message" id="input_message" required></textarea>
                      <input type="submit" name="submit" value="send">
             </div>
         </form>
@@ -200,7 +192,7 @@
          </section>
       </main>
       <footer>
-         &copy; 2016 - <a href="https://www.salleurl.edu/" target="_blank>">La Salle.</a> All Rights Reserved.
+         &copy; 2016 - <a href="https://www.salleurl.edu/" target="_blank">La Salle.</a> All Rights Reserved.
       </footer>
    </body>
 </html>
