--- a/Entregable2/index.html
+++ b/Entregable2/index.html
@@ -3,8 +3,8 @@
    <head>
       <meta charset="utf-8">
       <title>My Business Webpage</title>
-      <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
-      <link rel="stylesheet" href="css/style.css">
+      <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon-16x16.png">
+      <link rel="stylesheet" href="assets/css/style.css">
       <script src="https://kit.fontawesome.com/632dfba6fd.js" crossorigin="anonymous"></script>
    
     </head>
@@ -17,7 +17,7 @@
          <a href="#services">Services</a>
          <a href="#portfolio">Portfolio</a>
          <a href="#location">Location</a>
-         <a href="#emailus">Email Us</a>  
+         <a href="#emailus">Email Us</a>
       </nav>
       <main>
          <section id="whoweare">
@@ -26,7 +26,7 @@
             <article class="box">
                <div class="column">
                   <h3>Lorem ipsum</h3>
-                  <img id="whoweareimage" src="img/1.jpg" alt="who we are"> 
+                  <img id="whoweareimage" src="assets/img/1.jpg" alt="who we are"> 
                   <p>
                      Lorem insum dolor sit amet. consectetur adiniscing elit. Mauris convallis magna sit amet diam euismod malesuada. Vestibulum metus tellus
                      interdum elementum nis1 sed. cursus sodales magna. Proin teugiat termentum metus. Nam 1aculis vel nion vitae lacinia. Nulam ut ante 16
@@ -42,7 +42,7 @@
                      interdum elementum nis1 sed. cursus sodales magna. Proin teugiat termentum metus. Nam 1aculis vel nion vitae lacinia. Nulam ut ante 16
                      tempus tortor. Interdum et malesuada tames ac ante iosum primis in faucibus. Praesent conque vanus rusto. 1d moleste nib
                   </p>
-                  <img id="adimg" src="img/ad.png" alt="image of an ad">
+                  <img id="adimg" src="assets/img/ad.png" alt="image of an ad">
                   <h3>Lorem ipsum</h3>
                   <p>
                      Lorem insum dolor sit amet. consectetur adiniscing elit. Mauris convallis magna sit amet diam euismod malesuada. Vestibulum metus tellus
@@ -130,15 +130,15 @@
             <article>
                <p>There are success projects created by us</p>
                <p>
-                  <img src="img/2.jpg" alt="foto">
-                  <img src="img/3.jpg" alt="foto">
-                  <img src="img/4.jpg" alt="foto"><br>
-                  <img src="img/5.jpg" alt="foto">
-                  <img src="img/6.jpg" alt="foto">
-                  <img src="img/7.jpg" alt="foto"><br>
-                  <img src="img/8.jpg" alt="foto">
-                  <img src="img/9.jpg" alt="foto">
-                  <img src="img/10.jpg" alt="foto">
+                  <img src="assets/img/2.jpg" alt="foto">
+                  <img src="assets/img/3.jpg" alt="foto">
+                  <img src="assets/img/4.jpg" alt="foto"><br>
+                  <img src="assets/img/5.jpg" alt="foto">
+                  <img src="assets/img/6.jpg" alt="foto">
+                  <img src="assets/img/7.jpg" alt="foto"><br>
+                  <img src="assets/img/8.jpg" alt="foto">
+                  <img src="assets/img/9.jpg" alt="foto">
+                  <img src="assets/img/10.jpg" alt="foto">
                </p>
             </article>
          </section>
