--- a/Entregable3/index.html
+++ b/Entregable3/index.html
@@ -9,29 +9,63 @@
       sizes="16x16"
       href="assets/img/favicon-16x16.png"
     />
-    <link rel="stylesheet" href="assets/css/style.css" />
-    <script
-      src="https://kit.fontawesome.com/632dfba6fd.js"
-      crossorigin="anonymous"
-    ></script>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <script
+      src="https://kit.fontawesome.com/632dfba6fd.js"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <header>
       <h1>My Business Webpage</h1>
     </header>
-    <nav>
-      <a href="#whoweare">Who We are?</a>
-      <a href="#services">Services</a>
-      <a href="#portfolio">Portfolio</a>
-      <a href="#location">Location</a>
-      <a href="#emailus">Email Us</a>
+
+    <nav class="navbar navbar-expand-md navbar-dark">
+      <div class="container-fluid">
+        <button
+          class="navbar-toggler ms-auto"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="#whoweare">Who We are?</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#services">Services</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#portfolio">Portfolio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#location">Location</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#emailus">Email Us</a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </nav>
+
     <main>
       <section id="whoweare">
         <h2>Who we are?</h2>
@@ -73,7 +107,7 @@
               iosum primis in faucibus. Praesent conque vanus rusto. 1d moleste
               nib
             </p>
-            <img id="adimg" src="assets/img/ad.png" alt="image of an ad" />
+            <img id="adimg" src="assets/img/ad.jpg" alt="image of an ad" />
             <h3>Lorem ipsum</h3>
             <p>
               Lorem insum dolor sit amet. consectetur adiniscing elit. Mauris
@@ -87,6 +121,7 @@
           </div>
         </article>
       </section>
+
       <section id="services">
         <h2>Our Services</h2>
         <article class="box" id="servicebox">
@@ -182,54 +217,83 @@
         <h2>Portfolio</h2>
         <article>
           <p>There are success projects created by us</p>
-          <p>
-            <img src="assets/img/2.jpg" alt="foto" />
-            <img src="assets/img/3.jpg" alt="foto" />
-            <img src="assets/img/4.jpg" alt="foto" /><br />
-            <img src="assets/img/5.jpg" alt="foto" />
-            <img src="assets/img/6.jpg" alt="foto" />
-            <img src="assets/img/7.jpg" alt="foto" /><br />
-            <img src="assets/img/8.jpg" alt="foto" />
-            <img src="assets/img/9.jpg" alt="foto" />
-            <img src="assets/img/10.jpg" alt="foto" />
-          </p>
+          <div class="container">
+            <div class="row">
+              <div class="col-md-4">
+                <img src="assets/img/2.jpg" alt="foto" />
+              </div>
+              <div class="col-md-4">
+                <img src="assets/img/3.jpg" alt="foto" />
+              </div>
+              <div class="col-md-4">
+                <img src="assets/img/4.jpg" alt="foto" />
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-4">
+                <img src="assets/img/5.jpg" alt="foto" />
+              </div>
+
+              <div class="col-md-4">
+                <img src="assets/img/6.jpg" alt="foto" />
+              </div>
+
+              <div class="col-md-4">
+                <img src="assets/img/7.jpg" alt="foto" />
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-4">
+                <img src="assets/img/8.jpg" alt="foto" />
+              </div>
+
+              <div class="col-md-4">
+                <img src="assets/img/9.jpg" alt="foto" />
+              </div>
+
+              <div class="col-md-4">
+                <img src="assets/img/10.jpg" alt="foto" />
+              </div>
+            </div>
+          </div>
         </article>
       </section>
       <section id="location">
         <h2>Location</h2>
         <p>You can find us:</p>
-        <article class="box">
-          <div class="column" id="iframeColumn">
-            <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11969.682817802968!2d2.119786031159374!3d41.408385342664154!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12a49816d2174de3%3A0xdf19845b9ce0e77d!2sC%2F%20de%20Sant%20Joan%20de%20la%20Salle%2C%2042%2C%2008022%20Barcelona!5e0!3m2!1sde!2ses!4v1688754460741!5m2!1sde!2ses"
-              width="300"
-              height="300"
-              id="map"
-              allowfullscreen=""
-              loading="lazy"
-              referrerpolicy="no-referrer-when-downgrade"
-            ></iframe>
-          </div>
-          <div class="column">
-            <p>
-              <strong>Head Office</strong><br /><br />
-              <i
-                >12356 Blank Street<br />
-                Phone: <a href="tel:2456-134-321">2456-134-321</a><br />
-                E-Mail Address:
-                <a href="mailto:info@domain.com">info@domain.com</a></i
-              >
-            </p>
-            <p>
-              <strong>Emea</strong><br />
-              <i
-                >Carrer de Sant Joan de la Salle, 42<br />
-                08022 Barcelona<br />
-                Phone: <a href="tel:932902474">932 90 24 74</a><br />
-                E-Mail Address:
-                <a href="mailto:info@salleurl.edu">info@salleurl.edu</a></i
-              >
-            </p>
+        <article id="article_location">
+          <div class="container">
+            <div class="row">
+              <div class="offset-md-3 col-md-2">
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11969.682817802968!2d2.119786031159374!3d41.408385342664154!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12a49816d2174de3%3A0xdf19845b9ce0e77d!2sC%2F%20de%20Sant%20Joan%20de%20la%20Salle%2C%2042%2C%2008022%20Barcelona!5e0!3m2!1sde!2ses!4v1688754460741!5m2!1sde!2ses"
+                  width="300"
+                  height="300"
+                  id="map"
+                  allowfullscreen=""
+                  loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"
+                ></iframe>
+              </div>
+         
+              <div class="offset-md-3 col-md-4">
+                <p>
+                  <strong>Head Office</strong><br /><br />
+                  12356 Blank Street<br />
+                  Phone: <a href="tel:2456-134-321">2456-134-321</a><br />
+                  E-Mail Address:
+                  <a href="mailto:info@domain.com">info@domain.com</a>
+                </p>
+                <p>
+                  <strong>Emea</strong><br />
+                  Carrer de Sant Joan de la Salle, 42<br />
+                  08022 Barcelona<br />
+                  Phone: <a href="tel:932902474">932 90 24 74</a><br />
+                  E-Mail Address:
+                  <a href="mailto:info@salleurl.edu">info@salleurl.edu</a>
+                </p>
+              </div>
+            </div>
           </div>
         </article>
       </section>
