--- a/Entregable3/index.html
+++ b/Entregable3/index.html
@@ -74,7 +74,7 @@
           convallis magna sit amet diam euismod malesuada.
         </p>
         <article>
-          <div class="container">
+          <div class="container" id="whowearecontainer">
             <div class="row">
               <div class="col-md-6 right-border">
                 <h3>Lorem ipsum</h3>
