--- a/Entregable3/index.html
+++ b/Entregable3/index.html
@@ -31,7 +31,7 @@
       <h1>My Business Webpage</h1>
     </header>
 
-    <nav class="navbar navbar-expand-md navbar-dark">
+    <nav class="navbar navbar-expand-sm navbar-dark">
       <div class="container-fluid">
         <button
           class="navbar-toggler ms-auto"
@@ -76,7 +76,7 @@
         <article>
           <div class="container" id="whowearecontainer">
             <div class="row">
-              <div class="col-md-6 right-border">
+              <div class="col-lg-6 right-border">
                 <h3>Lorem ipsum</h3>
                 <img
                   id="whoweareimage"
@@ -113,7 +113,7 @@
                   Praesent conque vanus rusto.
                 </p>
               </div>
-              <div class="col-md-6">
+              <div class="col-lg-6">
                 <h3>Lorem ipsum</h3>
                 <img id="adimg" src="assets/img/ad.jpg" alt="image of an ad" />
                 <p>
@@ -150,7 +150,7 @@
         <article>
           <div class="container">
             <div class="row">
-              <div class="col-md-1">
+              <div class="col-3 col-md-4 col-lg-1">
           <span class="fa-stack fa-2xl">
             <span class="circle">
               <span class="fa-solid fa-cloud"></span>
@@ -158,7 +158,7 @@
           </span>
           
         </div>
-        <div class="col-md-3">
+        <div class="col-9 col-md-8 col-lg-3">
 
 
           <h3>Service 1</h3>
@@ -168,7 +168,7 @@
           </p>
 
         </div>
-        <div class="col-md-1">
+        <div class="col-3 col-md-4 col-lg-1">
 
           <span class="fa-stack fa-2xl">
             <span class="circle">
@@ -177,7 +177,7 @@
           </span>
 
         </div>
-        <div class="col-md-3">
+        <div class="col-9 col-md-8 col-lg-3">
 
           <h3>Service 2</h3>
           <p>
@@ -186,7 +186,7 @@
           </p>
 
         </div>
-        <div class="col-md-1">
+        <div class="col-3 col-md-4 col-lg-1">
 
           <span class="fa-stack fa-2xl">
             <span class="circle">
@@ -195,7 +195,7 @@
           </span>
 
         </div>
-        <div class="col-md-3">
+        <div class="col-9 col-md-8 col-lg-3">
 
           <h3>Service 3</h3>
           <p>
@@ -207,7 +207,7 @@
         </div>
 
         <div class="row">
-          <div class="col-md-1">
+          <div class="col-3 col-md-4 col-lg-1">
 
           <span class="fa-stack fa-2xl">
             <span class="circle">
@@ -216,7 +216,7 @@
           </span>
 
         </div>
-        <div class="col-md-3">
+        <div class="col-9 col-md-8 col-lg-3">
 
           <h3>Service 4</h3>
           <p>
@@ -225,7 +225,7 @@
           </p>
 
         </div>
-        <div class="col-md-1">
+        <div class="col-3 col-md-4 col-lg-1">
 
           <span class="fa-stack fa-2xl">
             <span class="circle">
@@ -234,7 +234,7 @@
           </span>
 
         </div>
-        <div class="col-md-3">
+        <div class="col-9 col-md-8 col-lg-3">
 
           <h3>Service 5</h3>
           <p>
@@ -243,7 +243,7 @@
           </p>
 
         </div>
-        <div class="col-md-1">
+        <div class="col-3 col-md-4 col-lg-1">
 
           <span class="fa-stack fa-2xl">
             <span class="circle">
@@ -252,7 +252,7 @@
           </span>
 
         </div>
-        <div class="col-md-3">
+        <div class="col-9 col-md-8 col-lg-3">
 
           <h3>Service 6</h3>
           <p>
@@ -270,37 +270,37 @@
           <p>There are success projects created by us</p>
           <div class="container">
             <div class="row">
-              <div class="col-md-4 col-sm-6">
+              <div class="col-lg-4 col-sm-6">
                 <img src="assets/img/2.jpg" alt="foto" />
               </div>
-              <div class="col-md-4 col-sm-6">
+              <div class="col-lg-4 col-sm-6">
                 <img src="assets/img/3.jpg" alt="foto" />
               </div>
-              <div class="col-md-4 col-sm-6">
+              <div class="col-lg-4 col-sm-6">
                 <img src="assets/img/4.jpg" alt="foto" />
               </div>
 
-              <div class="col-md-4 col-sm-6">
+              <div class="col-lg-4 col-sm-6">
                 <img src="assets/img/5.jpg" alt="foto" />
               </div>
 
-              <div class="col-md-4 col-sm-6" id="animatedImage">
+              <div class="col-lg-4 col-sm-6" id="animatedImage">
                 <img src="assets/img/6.jpg" alt="foto" />
               </div>
 
-              <div class="col-md-4 col-sm-6">
+              <div class="col-lg-4 col-sm-6">
                 <img src="assets/img/7.jpg" alt="foto" />
               </div>
 
-              <div class="col-md-4 col-sm-6">
+              <div class="col-lg-4 col-sm-6">
                 <img src="assets/img/8.jpg" alt="foto" />
               </div>
 
-              <div class="col-md-4 col-sm-6">
+              <div class="col-lg-4 col-sm-6">
                 <img src="assets/img/9.jpg" alt="foto" />
               </div>
 
-              <div class="col-md-4 col-sm-6">
+              <div class="col-lg-4 col-sm-6">
                 <img src="assets/img/10.jpg" alt="foto" />
               </div>
             </div>
@@ -313,7 +313,7 @@
         <article id="article_location">
           <div class="container">
             <div class="row justify-content-center">
-              <div class="offset-md-2 col-md-3 col-lg-2">
+              <div class="offset-lg-2 col-lg-3 col-xl-2">
                 <iframe
                   src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11969.682817802968!2d2.119786031159374!3d41.408385342664154!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12a49816d2174de3%3A0xdf19845b9ce0e77d!2sC%2F%20de%20Sant%20Joan%20de%20la%20Salle%2C%2042%2C%2008022%20Barcelona!5e0!3m2!1sde!2ses!4v1688754460741!5m2!1sde!2ses"
                   width="300"
@@ -325,7 +325,7 @@
                 ></iframe>
               </div>
 
-              <div class="offset-md-2 col-md-5 col-lg-4">
+              <div class="offset-lg-2 col-lg-5 col-xl-4">
                 <p>
                   <strong>Head Office</strong><br /><br />
                   12356 Blank Street<br />
@@ -334,7 +334,7 @@
                   <a href="mailto:info@domain.com">info@domain.com</a>
                 </p>
                 <p>
-                  <strong>Emea</strong><br />
+                  <strong>Emea</strong><br /><br />
                   Carrer de Sant Joan de la Salle, 42<br />
                   08022 Barcelona<br />
                   Phone: <a href="tel:932902474">932 90 24 74</a><br />
@@ -353,10 +353,10 @@
             <div class="container">
               <div class="form-group">
                 <div class="row justify-content-center">
-                  <div class="col-md-2">
+                  <div class="col-lg-2 col-sm-2">
                     <label for="input_name">Name: *</label>
                   </div>
-                  <div class="col-md-3">
+                  <div class="col-lg-4 col-sm-6">
                     <input
                       type="text"
                       name="name"
@@ -368,10 +368,10 @@
                   </div>
                 </div>
                 <div class="row justify-content-center">
-                  <div class="col-md-2">
+                  <div class="col-lg-2 col-sm-2">
                     <label for="input_email">Email: *</label>
                   </div>
-                  <div class="col-md-3">
+                  <div class="col-lg-4 col-sm-6">
                     <input
                       type="email"
                       name="email"
@@ -383,10 +383,10 @@
                   </div>
                 </div>
                 <div class="row justify-content-center">
-                  <div class="col-md-2">
+                  <div class="col-lg-2 col-sm-2">
                     <label for="input_phone">Phone: </label>
                   </div>
-                  <div class="col-md-3">
+                  <div class="col-lg-4 col-sm-6">
                     <input
                       type="tel"
                       name="phone"
@@ -397,10 +397,10 @@
                   </div>
                 </div>
                 <div class="row justify-content-center">
-                  <div class="col-md-2">
+                  <div class="col-lg-2 col-sm-2">
                     <label for="input_subject">Subject: *</label>
                   </div>
-                  <div class="col-md-3">
+                  <div class="col-lg-4 col-sm-6">
                     <input
                       type="text"
                       name="subject"
@@ -411,18 +411,19 @@
                   </div>
                 </div>
                 <div class="row justify-content-center">
-                  <div class="col-md-2">
+                  <div class="col-lg-2 col-sm-2">
                     <label for="input_message">Message: *</label>
                   </div>
-                  <div class="col-md-3">
+                  <div class="col-lg-4 col-sm-6">
                     <textarea
                       name="message"
                       id="input_message"
                       required
                       class="form-control"
                     ></textarea>
-
+                    <div id="submitButtonContainer">
                     <input type="submit" name="submit" value="send" />
+                  </div>
                   </div>
                 </div>
               </div>
