--- a/Entregable3/index.html
+++ b/Entregable3/index.html
@@ -69,7 +69,7 @@
     <main>
       <section id="whoweare">
         <h2>Who we are?</h2>
-        <p>
+        <p id="whoweare_paragraph">
           Lorem insum dolor sit amet. consectetur adiniscing elit<br />Mauris
           convallis magna sit amet diam euismod malesuada.
         </p>
@@ -150,7 +150,7 @@
         <article>
           <div class="container">
             <div class="row">
-              <div class="col-3 col-md-4 col-lg-1">
+              <div class="col-3 col-md-2 col-lg-1 offset-lg-0">
           <span class="fa-stack fa-2xl">
             <span class="circle">
               <span class="fa-solid fa-cloud"></span>
@@ -158,17 +158,17 @@
           </span>
           
         </div>
-        <div class="col-9 col-md-8 col-lg-3">
+        <div class="col-9 col-md-8 offset-md-2 col-lg-3 offset-lg-0">
 
 
           <h3>Service 1</h3>
           <p>
             Lorem insum dolor sit amet. consectetur adiniscing elit. Mauris
-            convallis magna sit amet diam euismod malesuada.
+            convallis magna sit amet diam euismod malesuada. Vestibulum metus tellus interdum elementum nis1 sed
           </p>
 
         </div>
-        <div class="col-3 col-md-4 col-lg-1">
+        <div class="col-3 col-md-2 col-lg-1 offset-lg-0">
 
           <span class="fa-stack fa-2xl">
             <span class="circle">
@@ -177,16 +177,16 @@
           </span>
 
         </div>
-        <div class="col-9 col-md-8 col-lg-3">
+        <div class="col-9 col-md-8 offset-md-2 col-lg-3 offset-lg-0">
 
           <h3>Service 2</h3>
           <p>
             Lorem insum dolor sit amet. consectetur adiniscing elit. Mauris
-            convallis magna sit amet diam euismod malesuada.
+            convallis magna sit amet diam euismod malesuada. Vestibulum metus tellus interdum elementum nis1 sed
           </p>
 
         </div>
-        <div class="col-3 col-md-4 col-lg-1">
+        <div class="col-3 col-md-2  col-lg-1 offset-lg-0">
 
           <span class="fa-stack fa-2xl">
             <span class="circle">
@@ -195,19 +195,19 @@
           </span>
 
         </div>
-        <div class="col-9 col-md-8 col-lg-3">
+        <div class="col-9 col-md-8 offset-md-2 col-lg-3 offset-lg-0">
 
           <h3>Service 3</h3>
           <p>
             Lorem insum dolor sit amet. consectetur adiniscing elit. Mauris
-            convallis magna sit amet diam euismod malesuada.
+            convallis magna sit amet diam euismod malesuada. Vestibulum metus tellus interdum elementum nis1 sed
           </p>
 
         </div>
         </div>
 
         <div class="row">
-          <div class="col-3 col-md-4 col-lg-1">
+          <div class="col-3 col-md-2 col-lg-1 offset-lg-0">
 
           <span class="fa-stack fa-2xl">
             <span class="circle">
@@ -216,16 +216,16 @@
           </span>
 
         </div>
-        <div class="col-9 col-md-8 col-lg-3">
+        <div class="col-9 col-md-8 offset-md-2 col-lg-3 offset-lg-0">
 
           <h3>Service 4</h3>
           <p>
             Lorem insum dolor sit amet. consectetur adiniscing elit. Mauris
-            convallis magna sit amet diam euismod malesuada.
+            convallis magna sit amet diam euismod malesuada. Vestibulum metus tellus interdum elementum nis1 sed
           </p>
 
         </div>
-        <div class="col-3 col-md-4 col-lg-1">
+        <div class="col-3 col-md-2 col-lg-1 offset-lg-0">
 
           <span class="fa-stack fa-2xl">
             <span class="circle">
@@ -234,16 +234,16 @@
           </span>
 
         </div>
-        <div class="col-9 col-md-8 col-lg-3">
+        <div class="col-9 col-md-8 offset-md-2 col-lg-3 offset-lg-0">
 
           <h3>Service 5</h3>
           <p>
             Lorem insum dolor sit amet. consectetur adiniscing elit. Mauris
-            convallis magna sit amet diam euismod malesuada.
+            convallis magna sit amet diam euismod malesuada. Vestibulum metus tellus interdum elementum nis1 sed
           </p>
 
         </div>
-        <div class="col-3 col-md-4 col-lg-1">
+        <div class="col-3 col-md-2 col-lg-1 offset-lg-0">
 
           <span class="fa-stack fa-2xl">
             <span class="circle">
@@ -252,12 +252,12 @@
           </span>
 
         </div>
-        <div class="col-9 col-md-8 col-lg-3">
+        <div class="col-9 col-md-8 offset-md-2 col-lg-3 offset-lg-0">
 
           <h3>Service 6</h3>
           <p>
             Lorem insum dolor sit amet. consectetur adiniscing elit. Mauris
-            convallis magna sit amet diam euismod malesuada.
+            convallis magna sit amet diam euismod malesuada. Vestibulum metus tellus interdum elementum nis1 sed
           </p>
 
         </div>
@@ -300,7 +300,7 @@
                 <img src="assets/img/9.jpg" alt="foto" />
               </div>
 
-              <div class="col-lg-4 col-sm-6">
+              <div class="col-lg-4 offset-md-4 col-md-4 col-sm-12">
                 <img src="assets/img/10.jpg" alt="foto" />
               </div>
             </div>
@@ -353,10 +353,10 @@
             <div class="container">
               <div class="form-group">
                 <div class="row justify-content-center">
-                  <div class="col-lg-2 col-sm-2">
+                  <div class="col-xl-2 col-sm-2">
                     <label for="input_name">Name: *</label>
                   </div>
-                  <div class="col-lg-4 col-sm-6">
+                  <div class="col-xl-4 col-sm-6">
                     <input
                       type="text"
                       name="name"
@@ -368,10 +368,10 @@
                   </div>
                 </div>
                 <div class="row justify-content-center">
-                  <div class="col-lg-2 col-sm-2">
+                  <div class="col-xl-2 col-sm-2">
                     <label for="input_email">Email: *</label>
                   </div>
-                  <div class="col-lg-4 col-sm-6">
+                  <div class="col-xl-4 col-sm-6">
                     <input
                       type="email"
                       name="email"
@@ -383,10 +383,10 @@
                   </div>
                 </div>
                 <div class="row justify-content-center">
-                  <div class="col-lg-2 col-sm-2">
+                  <div class="col-xl-2 col-sm-2">
                     <label for="input_phone">Phone: </label>
                   </div>
-                  <div class="col-lg-4 col-sm-6">
+                  <div class="col-xl-4 col-sm-6">
                     <input
                       type="tel"
                       name="phone"
@@ -397,10 +397,10 @@
                   </div>
                 </div>
                 <div class="row justify-content-center">
-                  <div class="col-lg-2 col-sm-2">
+                  <div class="col-xl-2 col-sm-2">
                     <label for="input_subject">Subject: *</label>
                   </div>
-                  <div class="col-lg-4 col-sm-6">
+                  <div class="col-xl-4 col-sm-6">
                     <input
                       type="text"
                       name="subject"
@@ -411,10 +411,10 @@
                   </div>
                 </div>
                 <div class="row justify-content-center">
-                  <div class="col-lg-2 col-sm-2">
+                  <div class="col-xl-2 col-sm-2">
                     <label for="input_message">Message: *</label>
                   </div>
-                  <div class="col-lg-4 col-sm-6">
+                  <div class="col-xl-4 col-sm-6">
                     <textarea
                       name="message"
                       id="input_message"
