--- a/Entregable3/index.html
+++ b/Entregable3/index.html
@@ -151,117 +151,100 @@
           <div class="container">
             <div class="row">
               <div class="col-3 col-md-2 col-lg-1 offset-lg-0">
-          <span class="fa-stack fa-2xl">
-            <span class="circle">
-              <span class="fa-solid fa-cloud"></span>
-            </span>
-          </span>
-          
-        </div>
-        <div class="col-9 col-md-8 offset-md-2 col-lg-3 offset-lg-0">
+                <span class="fa-stack fa-2xl">
+                  <span class="circle">
+                    <span class="fa-solid fa-cloud"></span>
+                  </span>
+                </span>
+              </div>
+              <div class="col-9 col-md-8 offset-md-2 col-lg-3 offset-lg-0">
+                <h3>Service 1</h3>
+                <p>
+                  Lorem insum dolor sit amet. consectetur adiniscing elit.
+                  Mauris convallis magna sit amet diam euismod malesuada.
+                  Vestibulum metus tellus interdum elementum nis1 sed
+                </p>
+              </div>
+              <div class="col-3 col-md-2 col-lg-1 offset-lg-0">
+                <span class="fa-stack fa-2xl">
+                  <span class="circle">
+                    <span class="fa-solid fa-code"></span>
+                  </span>
+                </span>
+              </div>
+              <div class="col-9 col-md-8 offset-md-2 col-lg-3 offset-lg-0">
+                <h3>Service 2</h3>
+                <p>
+                  Lorem insum dolor sit amet. consectetur adiniscing elit.
+                  Mauris convallis magna sit amet diam euismod malesuada.
+                  Vestibulum metus tellus interdum elementum nis1 sed
+                </p>
+              </div>
+              <div class="col-3 col-md-2 col-lg-1 offset-lg-0">
+                <span class="fa-stack fa-2xl">
+                  <span class="circle">
+                    <span class="fa-solid fa-wifi"></span>
+                  </span>
+                </span>
+              </div>
+              <div class="col-9 col-md-8 offset-md-2 col-lg-3 offset-lg-0">
+                <h3>Service 3</h3>
+                <p>
+                  Lorem insum dolor sit amet. consectetur adiniscing elit.
+                  Mauris convallis magna sit amet diam euismod malesuada.
+                  Vestibulum metus tellus interdum elementum nis1 sed
+                </p>
+              </div>
+            </div>
 
-
-          <h3>Service 1</h3>
-          <p>
-            Lorem insum dolor sit amet. consectetur adiniscing elit. Mauris
-            convallis magna sit amet diam euismod malesuada. Vestibulum metus tellus interdum elementum nis1 sed
-          </p>
-
-        </div>
-        <div class="col-3 col-md-2 col-lg-1 offset-lg-0">
-
-          <span class="fa-stack fa-2xl">
-            <span class="circle">
-              <span class="fa-solid fa-code"></span>
-            </span>
-          </span>
-
-        </div>
-        <div class="col-9 col-md-8 offset-md-2 col-lg-3 offset-lg-0">
-
-          <h3>Service 2</h3>
-          <p>
-            Lorem insum dolor sit amet. consectetur adiniscing elit. Mauris
-            convallis magna sit amet diam euismod malesuada. Vestibulum metus tellus interdum elementum nis1 sed
-          </p>
-
-        </div>
-        <div class="col-3 col-md-2  col-lg-1 offset-lg-0">
-
-          <span class="fa-stack fa-2xl">
-            <span class="circle">
-              <span class="fa-solid fa-wifi"></span>
-            </span>
-          </span>
-
-        </div>
-        <div class="col-9 col-md-8 offset-md-2 col-lg-3 offset-lg-0">
-
-          <h3>Service 3</h3>
-          <p>
-            Lorem insum dolor sit amet. consectetur adiniscing elit. Mauris
-            convallis magna sit amet diam euismod malesuada. Vestibulum metus tellus interdum elementum nis1 sed
-          </p>
-
-        </div>
-        </div>
-
-        <div class="row">
-          <div class="col-3 col-md-2 col-lg-1 offset-lg-0">
-
-          <span class="fa-stack fa-2xl">
-            <span class="circle">
-              <span class="fa-solid fa-earth-americas"></span>
-            </span>
-          </span>
-
-        </div>
-        <div class="col-9 col-md-8 offset-md-2 col-lg-3 offset-lg-0">
-
-          <h3>Service 4</h3>
-          <p>
-            Lorem insum dolor sit amet. consectetur adiniscing elit. Mauris
-            convallis magna sit amet diam euismod malesuada. Vestibulum metus tellus interdum elementum nis1 sed
-          </p>
-
-        </div>
-        <div class="col-3 col-md-2 col-lg-1 offset-lg-0">
-
-          <span class="fa-stack fa-2xl">
-            <span class="circle">
-              <span class="fa-solid fa-flag"></span>
-            </span>
-          </span>
-
-        </div>
-        <div class="col-9 col-md-8 offset-md-2 col-lg-3 offset-lg-0">
-
-          <h3>Service 5</h3>
-          <p>
-            Lorem insum dolor sit amet. consectetur adiniscing elit. Mauris
-            convallis magna sit amet diam euismod malesuada. Vestibulum metus tellus interdum elementum nis1 sed
-          </p>
-
-        </div>
-        <div class="col-3 col-md-2 col-lg-1 offset-lg-0">
-
-          <span class="fa-stack fa-2xl">
-            <span class="circle">
-              <span class="fa-solid fa-gear"></span>
-            </span>
-          </span>
-
-        </div>
-        <div class="col-9 col-md-8 offset-md-2 col-lg-3 offset-lg-0">
-
-          <h3>Service 6</h3>
-          <p>
-            Lorem insum dolor sit amet. consectetur adiniscing elit. Mauris
-            convallis magna sit amet diam euismod malesuada. Vestibulum metus tellus interdum elementum nis1 sed
-          </p>
-
-        </div>
-        </div>
+            <div class="row">
+              <div class="col-3 col-md-2 col-lg-1 offset-lg-0">
+                <span class="fa-stack fa-2xl">
+                  <span class="circle">
+                    <span class="fa-solid fa-earth-americas"></span>
+                  </span>
+                </span>
+              </div>
+              <div class="col-9 col-md-8 offset-md-2 col-lg-3 offset-lg-0">
+                <h3>Service 4</h3>
+                <p>
+                  Lorem insum dolor sit amet. consectetur adiniscing elit.
+                  Mauris convallis magna sit amet diam euismod malesuada.
+                  Vestibulum metus tellus interdum elementum nis1 sed
+                </p>
+              </div>
+              <div class="col-3 col-md-2 col-lg-1 offset-lg-0">
+                <span class="fa-stack fa-2xl">
+                  <span class="circle">
+                    <span class="fa-solid fa-flag"></span>
+                  </span>
+                </span>
+              </div>
+              <div class="col-9 col-md-8 offset-md-2 col-lg-3 offset-lg-0">
+                <h3>Service 5</h3>
+                <p>
+                  Lorem insum dolor sit amet. consectetur adiniscing elit.
+                  Mauris convallis magna sit amet diam euismod malesuada.
+                  Vestibulum metus tellus interdum elementum nis1 sed
+                </p>
+              </div>
+              <div class="col-3 col-md-2 col-lg-1 offset-lg-0">
+                <span class="fa-stack fa-2xl">
+                  <span class="circle">
+                    <span class="fa-solid fa-gear"></span>
+                  </span>
+                </span>
+              </div>
+              <div class="col-9 col-md-8 offset-md-2 col-lg-3 offset-lg-0">
+                <h3>Service 6</h3>
+                <p>
+                  Lorem insum dolor sit amet. consectetur adiniscing elit.
+                  Mauris convallis magna sit amet diam euismod malesuada.
+                  Vestibulum metus tellus interdum elementum nis1 sed
+                </p>
+              </div>
+            </div>
+          </div>
         </article>
       </section>
       <section id="portfolio">
@@ -422,8 +405,8 @@
                       class="form-control"
                     ></textarea>
                     <div id="submitButtonContainer">
-                    <input type="submit" name="submit" value="send" />
-                  </div>
+                      <input type="submit" name="submit" value="send" />
+                    </div>
                   </div>
                 </div>
               </div>
