--- a/Entregable3/index.html
+++ b/Entregable3/index.html
@@ -25,6 +25,9 @@
       integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
       crossorigin="anonymous"
     ></script>
+      <script src="assets/js/scripts.js" async></script>
+            <script src="assets/js/observer.js"></script>
+
   </head>
   <body>
     <header>
@@ -67,7 +70,7 @@
     </nav>
 
     <main>
-      <section id="whoweare">
+      <section id="whoweare" class="fadeup">
         <h2>Who we are?</h2>
         <p id="whoweare_paragraph">
           Lorem insum dolor sit amet. consectetur adiniscing elit<br />Mauris
@@ -145,7 +148,7 @@
         </article>
       </section>
 
-      <section id="services">
+      <section id="services"  class="fadeup">
         <h2>Our Services</h2>
         <article>
           <div class="container">
@@ -247,7 +250,7 @@
           </div>
         </article>
       </section>
-      <section id="portfolio">
+      <section id="portfolio"  class="fadeup">
         <h2>Portfolio</h2>
         <article>
           <p>There are success projects created by us</p>
@@ -290,7 +293,7 @@
           </div>
         </article>
       </section>
-      <section id="location">
+      <section id="location"  class="fadeup">
         <h2>Location</h2>
         <p>You can find us:</p>
         <article id="article_location">
@@ -329,7 +332,7 @@
           </div>
         </article>
       </section>
-      <section id="emailus">
+      <section id="emailus"  class="fadeup">
         <h2>Email Us</h2>
         <article>
           <form action="#" method="post" autocomplete="on">
